test/fail/entity-prop-redefined-2.app
//Property 'name' of entity 'User' is defined multiple times.

application test

  entity User{
    test :: String
  }
  
  extend entity User{
    name :: Int := 0
  }
  
  extend entity User{
    name :: Int
  }